--- a/react-firebase-bbs/src/App.css
+++ b/react-firebase-bbs/src/App.css
@@ -100,7 +100,7 @@ div.bbs_write input:hover {
 div.bbs_write input:focus {
   background-color: #eee;
 }
-button.btn_save {
+button {
   background-color: rgb(129, 129, 129);
   width: 80%;
   color: white;
@@ -110,6 +110,6 @@ button.btn_save {
   border: none;
   border-radius: 10px;
 }
-button.btn_save:hover {
+button:hover {
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
